# TodosExtension

./: .gitignore  Cargo.toml  LICENSE  README.md  build_flatpak.sh  me.dumke.TodosExtension.yml  setup.sh  todos_extension.desktop
src/: data.rs  main.rs  ui.rs
webapp/: app.py  docker-compose.example.yml  docker-compose.yml  requirements.txt
webapp/templates/: index.html  login.html
